--- a/shared.css
+++ b/shared.css
@@ -79,7 +79,7 @@ header a {
     border-radius: 6px;
 }
 
-header a:hover {
+header nav a:hover {
     color: rgb(77, 77, 77);
     background-color: rgb(255, 251, 0);
 }
