--- a/movies.css
+++ b/movies.css
@@ -1,15 +1,32 @@
 body {
     background: linear-gradient(30deg, rgb(77, 77, 77), rgb(58, 58, 58));
+    /* background: linear-gradient(45deg, rgb(227, 255, 253), rgb(202, 243, 216)); */
     color: rgb(68, 68, 68);
+}
+
+#page-logo a {
+    color: rgb(183, 230, 235);
 }
 
 header {
     position: static;
 }
 
+header a {
+    color: rgb(183, 230, 235);
+}
+
+header nav a:hover {
+    background: rgb(183, 230, 235);
+    color: rgb(59, 59, 59);
+}
+
 main ul {
-    width: 90%;
-    margin: 0 auto;
+    width: 1200px;
+    margin: 0 auto 48px auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px 20px;
 }
 
 
@@ -25,12 +42,17 @@ main li {
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
     border-radius: 6px;
     overflow: hidden;
+    /* width: 50%; */
 }
 
 main li img {
     width: 300px;
     height: 280px;
-    /* object-fit: cover; */
+    object-fit: cover;
+}
+
+li:nth-child(3) {
+    grid-column: 1/3;
 }
 
 .item-content {
@@ -41,6 +63,14 @@ main li img {
     /* align-items: flex-end; */
 }
 
+.item-content h2 {
+    margin: 0;
+}
+
+.item-content p {
+    margin-top: 10px;
+}
+
 .actions {
     text-align: right;
 }
@@ -48,11 +78,12 @@ main li img {
 .actions a {
     text-decoration: none;
     padding: 6px;
-    color: rgb(22, 211, 228);
+    color: rgb(11, 136, 198);
+    border-radius: 5px;
 }
 
 .actions a:hover {
-    background-color: rgb(235, 253, 255);
+    background-color: rgb(23, 216, 238);
 }
 
 
